# LJMU--Thesis-Coding-RAG-RAGAS-Deepeval

./: .gitignore  README.md  check_metrics.py  data_preparation.py  pyproject.toml  requirements.txt  run_hybrid_rag.py  run_hyde_rag.py  run_naive_rag.py  test_reranking_e2e.py
dataset/golden/: golden_checkpoint_key1.json  golden_checkpoint_key2.json  golden_checkpoint_key3.json  golden_checkpoint_key4.json  golden_checkpoint_key5.json  golden_dataset.csv
dataset/knowledge_base/: kb_category_documents.json  kb_customer_state_documents.json  kb_delivery_status_documents.json  kb_month_documents.json  kb_seller_documents.json
docs/: generate_docs.py  generate_golden_dataset_docs.py  generate_naive_rag_pdfs.py
evaluation/: run_naive_rag_eval.py
evaluation/results/: Naive-RAG_01-05-2026_02-06PM.xlsx  Naive-RAG_01-05-2026_12-33PM.xlsx
hybrid_rag/: config.py  generate_docs.py  generator.py  ingestion.py  pipeline.py  retriever.py  run_hybrid_rag.py  utils.py
hybrid_rag/docs/: generate_hybrid_rag_pdfs.py
hybrid_rag/evaluation/: run_hybrid_rag_eval.py
hybrid_rag/implementation/: config.py  generator.py  ingestion.py  pipeline.py  retriever.py  (+1 more)
hyde_rag/: config.py  generate_docs.py  generator.py  ingestion.py  pipeline.py  retriever.py  run_hyde_rag.py
multiquery_rag/: run_multiquery_rag.py
naive_rag/: config.py  generator.py  ingestion.py  pipeline.py  retriever.py  run_naive_rag.py
preprocessing/: config.py  data_preparation.py  step1_load_raw_data.py  step2_join_datasets.py  step3_enrich_master.py  step4_build_knowledge_base.py  step5_build_golden_dataset.py
reranking_rag/: run_reranking_rag.py
results/: RAG_Master_Comparison_05-05-2026_11-45AM.xlsx
scripts/: check_metrics.py  smoke_test_reranking.py
shared/: check_metrics.py  groq_client.py
tests/: conftest.py  run_rag_tests.py  test_config.py  test_step1_load_raw_data.py  test_step2_join_datasets.py  test_step3_enrich_master.py  test_step4_build_knowledge_base.py  test_step5_build_golden_dataset.py
(+78 files in other folders)
